# surf-archiver

./: .gitignore  README.md  compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: run-tests.sh
surf_archiver/: abc.py  archiver.py  cli.py  config.py  file.py  log.py  main.py  publisher.py  test_utils.py  utils.py
tests/: compose.yml  conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_archive_file_system.py  test_cli.py  test_publisher.py
tests/unit/: test_archiver.py  test_experiment_file_system.py
