[tool.poetry]
name = "surf-archiver"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^9.4.1"
pydantic = "^2.7.1"
pydantic-settings = {extras = ["yaml"], version = "^2.2.1"}
s3fs = "^2024.3.1"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
httpx = "^0.27.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pika = "^1.3.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[tool.poetry.scripts]
surf-archiver = 'surf_archiver.cli:app'


[tool.isort]
profile = "black"


[[tool.mypy.overrides]]
module = [
    "pika",
    "s3fs"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
